src/main/kotlin/com/example/instargram/global/error/exception/BusinessException.kt
package com.example.instargram.global.error.exception

abstract class BusinessException (
    val errorCode : ErrorCode
) : RuntimeException()
